--- a/app/src/main/res/layout/activity_name_edit.xml
+++ b/app/src/main/res/layout/activity_name_edit.xml
@@ -29,6 +29,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorGray"
+        android:id="@+id/name_edit"
         android:drawableRight="@drawable/ic_cancel_black_24dp"
         android:text="@string/showname"
         android:inputType="textPersonName"
@@ -44,16 +45,5 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-    <Switch
-        android:id="@+id/switch_showage"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:paddingStart="10dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:background="@color/colorPrimary"
-        android:text="是否对他人显示"
-        android:textSize="23sp"/>
 </LinearLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
