--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -11,7 +11,10 @@
         android:layout_height="wrap_content"
         android:background="#EFAA52"
         android:gravity="center"
-        android:id="@+id/resources_list1">
+        android:id="@+id/resources_list1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
     <Button
         android:id="@+id/task_list"
         android:layout_width="wrap_content"
