--- a/app/src/main/res/layout/fragment_dashboard_new_task_resources.xml
+++ b/app/src/main/res/layout/fragment_dashboard_new_task_resources.xml
@@ -63,21 +63,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/new_TR_type"/>
 
-    <EditText
-        android:id="@+id/new_TR_time_detail"
-        android:layout_width="200dp"
+    <Button
+        android:id="@+id/new_time_btn"
+        android:layout_width="290dp"
         android:layout_height="20dp"
         android:layout_marginStart="60dp"
-        android:layout_marginTop="50dp"
-        android:background="#FFFFFF"
-        app:layout_constraintStart_toStartOf="@id/new_TR_time"
-        app:layout_constraintTop_toTopOf="@id/rg" />
-
-    <Buttton
-        android:id="@+id/new_time_btn"
-        android:layout_width="200dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="260dp"
         android:layout_marginTop="50dp"
         android:background="#FFFFFF"
         app:layout_constraintStart_toStartOf="@id/new_TR_time"
@@ -102,7 +92,7 @@
         android:layout_marginTop="60dp"
         android:background="#FFFFFF"
         app:layout_constraintStart_toStartOf="@id/new_TR_location"
-        app:layout_constraintTop_toTopOf="@id/new_TR_time_detail" />
+        app:layout_constraintTop_toTopOf="@id/new_time_btn" />
 
     <TextView
         android:id="@+id/new_TR_content"
