--- a/app/src/main/res/layout/fragment_dashboard_new_task_resources.xml
+++ b/app/src/main/res/layout/fragment_dashboard_new_task_resources.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".ui.dashboard.DashboardNewTaskReources">
 
 
     <TextView
@@ -73,7 +74,7 @@
         app:layout_constraintStart_toStartOf="@id/new_TR_time"
         app:layout_constraintTop_toTopOf="@id/rg" />
 
-    <Buttton
+    <Button
         android:id="@+id/new_time_btn"
         android:layout_width="200dp"
         android:layout_height="20dp"
